--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ pickle-email-*.html
 
 # Ignore application configuration
 /config/application.yml
+
+# Ignore Heroku Local Config
+/config/heroku_env.rb
